# shapematch

./: CMakeLists.txt
cmake/: FindLIBIGL.cmake
src/: SOP_ShapeMatch.cpp
src/SOP_Pca/: CMakeLists.txt  SOP_Pca.cpp  SOP_Pca.hpp  converters.cpp  converters.hpp  pca.cpp  pca.hpp
src/SOP_ShapeMatch/: CMakeLists.txt  SOP_ShapeMatch.cpp  SOP_ShapeMatch.h
